changer le nom des comités

--- a/app/views/home/coor.haml
+++ b/app/views/home/coor.haml
@@ -35,7 +35,7 @@
     %h3.sub-section Nos comités nationaux
     %ol{type: "A"}
       %li
-        %strong Mobilisation et recrutement
+        %strong Mobilisation
         %ul
           %li Répertorie les événements où nous pourrions informer les gens et les rallier à notre démarche
           %li Bâtit des ponts avec la société civile
@@ -45,7 +45,7 @@
           %li Distribue les outils de aux Constituant.e.s dans les ACRQ
           %li Etc.
       %li
-        %strong Financement et trésorerie
+        %strong Financement
         %ul
           %li Il est mandaté pour faire les démarches relatives à notre structure corporative (OSBL)
           %li S’occupe des finances de l’Alliance pour une constituante citoyenne du Québec avec l’OSBL
@@ -72,7 +72,7 @@
           %li Assurer l’uniformité du visuel et des outils promotionnels
           %li Etc.
       %li
-        %strong Éducation (ateliers constituants)
+        %strong Éducation citoyenne
         %ul
           %li Prépare et organise les ateliers constituants dans les régions
           %li S’occupe de la gestion des comptes rendus de ces ateliers constituants
@@ -80,7 +80,7 @@
           %li Répertorie des exemples de constitutions dans le monde et au Québec
           %li Etc.
       %li
-        %strong Web
+        %strong Multimédia (TI)
         %ul
           %li Veille à la gestion de notre site Web et aux mises à jour.
           %li Crée les pages de réseaux sociaux et assure l’uniformité des informations
@@ -88,7 +88,7 @@
           %li Veille au contenu de nos pages Facebook et agit comme modérateur lorsque nécessaire
           %li Etc.
       %li
-        %strong Comité secrétariat et registrariat
+        %strong Secrétariat-registrariat
         %ul
           %li Assure que tous les documents officiels produits par l’Alliance pour une constituante citoyenne du Québec sont rédigés dans un français impeccable.
           %li Vérifie et révise tous les documents
@@ -97,8 +97,11 @@
           %li Répertorie tous les procès-verbaux des ACRQ et autres document de l’ACCQ.
           %li Etc.
       %li
-        %strong Résolution de problèmes
+        %strong Éthique
 
+      %li
+        %strong Événements
 
+        
     %h3.sub-section Les 17 Responsables des services de régions (RSR)
     %p Les Responsables des services de région sont intégrés au COOR pour favoriser l’harmonisation de toute notre structure organisationnelle horizontale.
