--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -4,28 +4,17 @@
 -breadcrumb :nous_joindre
 
 .row
-  .col-md-12    
+  .col-md-12
     %p
-      Lors de la dernière rencontre nationale tenue à Saint-Lambert les 12 et 13 décembre 2015, l’assemblée a élu un Conseil des opérations intérimaire (COI). Ce conseil était formé de sept membres. Après trois démissions, l’actuel COI est formé des membres suivants :
+      À la suite de la 4e rencontre nationale qui s’est tenue à Trois-Rivières en mai 2016, il a été convenu de mettre sur pied huit comités dont les responsables auront pour rôle de coordonner les activités de l’ACCQ. En date du 24 novembre 2016, voici les responsables choisis :
 
-    %table.table.table-striped
-      %thead
-        %tr
-          %th Fonction
-          %th Citoyen.ne
-      %tbody
-        %tr
-          %td Conseiller
-          %td Jean-Pierre Blanchard
-        %tr
-          %td Trésorier
-          %td Marc Dion
-        %tr
-          %td Conseiller
-          %td Maxime Gingras
-        %tr
-          %td Conseiller
-          %td René Philippe Viens
+    %ul.list
+      %li Comité Communication Jean-Claude Gauthier, ACRQ 13 - Laval
+      %li Comité Éducation citoyenne Philippe Malric, ACRQ 06 - Montréal
+      %li Comité Éthique Marie-Luce Fortier, ACRQ 03 – Capitale-Nationale
+      %li Comité Financement Éric Groleau, ACRQ 04 - Mauricie
+      %li Comité Multimédia (TI) Marc-André Robillard, ACRQ 14 – Lanaudière
+      %li Comité Secrétariat-registrariat Danielle Morin, ACRQ 05 - Estrie
 
 
 
