--- a/app/views/home/organigramme.haml
+++ b/app/views/home/organigramme.haml
@@ -11,7 +11,7 @@
     %p
       =image_tag "structure_organisationnelle_globale.jpg", class: "img-responsive"
     %p
-      L’Alliance pour une constituante citoyenne du Québec vous remercie de prendre le temps nécessaire pour bien comprendre les fondements de notre organisation. Nous tenons à préciser que la structure de notre organisation est horizontale. 
+      L’Assemblée constituante citoyenne du Québec vous remercie de prendre le temps nécessaire pour bien comprendre les fondements de notre organisation. Nous tenons à préciser que la structure de notre organisation est horizontale.
       
     %p
       Bien que tous les postes occupés par les constituant.e.s nécessitent des talents et des compétences particulières, aucun des responsables n’a autorité sur les autres. Les constituant.e.s impliqués sont des personnes de confiance qui travaillent avec enthousiasme et détermination à la poursuite de notre objectif commun, soit :
@@ -53,10 +53,11 @@
                   Comités nationaux
                   %ul
                     %li Mobilisation
-                    %li Financement et trésorerie
-                    %li Communications
-                    %li Éducation
-                    %li Web
-                    %li Secrétariat et registrariat
-                    %li Résolution de problèmes
+                    %li Financement
+                    %li Communication
+                    %li Éducation citoyenne
+                    %li Multimédia (TI)
+                    %li Secrétariat-registrariat
+                    %li Éthique
+                    %li Événements
                 %li Responsables des services en régions (RSR)
