--- a/app/views/structure/structure_nationale/_comites_nationaux.haml
+++ b/app/views/structure/structure_nationale/_comites_nationaux.haml
@@ -18,7 +18,7 @@
   %p
     %strong Pour vous joindre à ce comité: #{mail_to "mobilisation@constituantecitoyenne.quebec"}
 %section#comite-financement
-  %h4.sub-section Financement et trésorie
+  %h4.sub-section Financement
   %ul
     %li Fait les démarches relatives à notre structure corporative (OSBL);
     %li Gère le budget de l’Alliance pour une constituante citoyenne du Québec avec l’OSBL;
@@ -34,7 +34,7 @@
     %strong Pour vous joindre à ce comité: #{mail_to "financement@constituantecitoyenne.quebec"}
 
 %section#comite-communications
-  %h4.sub-section Communications
+  %h4.sub-section Communication
 
   %p Ce comité est la pierre angulaire de notre démarche. Nous suggérons qu’il soit divisé en quatre sous-comités: Infographie, Information publique, Médias et Événements.
   %ul
@@ -52,7 +52,7 @@
 
 
 %section#comite-education
-  %h4.sub-section Éducation (Ateliers constituants)
+  %h4.sub-section Éducation citoyenne
   %ul
     %li Prépare et organise les ateliers constituants dans les régions;
     %li Assure la gestion des comptes rendus de ces ateliers constituants;
@@ -64,7 +64,7 @@
 
 
 %section#comite-web
-  %h4.sub-section Web
+  %h4.sub-section Multimédia (TI)
   %ul
     %li Veille à la gestion de notre site Web et aux mises à jour;
     %li Crée les pages de réseaux sociaux et assure l’uniformité des informations;
@@ -76,7 +76,7 @@
     %strong Pour vous joindre à ce comité: #{mail_to "web@constituantecitoyenne.quebec"}
 
 %section#comite-secretariat
-  %h4.sub-section Secrétariat et registrariat
+  %h4.sub-section Secrétariat-registrariat
   %ul
     %li Assure que tous les documents officiels produits par l’Alliance pour une constituante citoyenne du Québec sont rédigés dans un français impeccable;
     %li Vérifie et révise tous les documents;
@@ -88,8 +88,9 @@
   %p
     %strong Pour vous joindre à ce comité: #{mail_to "secretariat@constituantecitoyenne.quebec"}
 
+
 %section#comite-resolution
-  %h4.sub-section Résolution de problèmes
+  %h4.sub-section Éthique
 
   %h5 1. Définition du problème
   %p
@@ -129,3 +130,7 @@
 
 %p
   %strong Pour vous joindre à ce comité: #{mail_to "mediation@constituantecitoyenne.quebec"}
+
+%section#comite-evenements
+  %h4.sub-section Événements
+  %p Le comité Événements s'occupe principalement d'organiser les rencontres nationales mais aussi tout autre événement majeur de mobilisation. Il doit travailler en collaboration avec les autres comités pour planifier les rencontres nationales de façon à tenir compte des travaux réalisés par ceux-ci.
