--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,6 +1,6 @@
 .well
   %h3.no-margin
-    Nous, <b>Constituantes et Constituants</b>, nous nous engageons à promouvoir, à préparer et à exiger la convocation d’une Assemblée constituante non partisane, libre dans ses délibérations, et à tout mettre en œuvre pour que soit respectée la volonté du peuple québécois.
+    Nous, <b>Citoyennes et Citoyens</b>, nous nous engageons à promouvoir, à préparer et à exiger la convocation d’une Assemblée constituante non partisane, libre dans ses délibérations, et à tout mettre en œuvre pour que soit respectée la volonté du peuple québécois.
   %p
     #{link_to "<i class='fa fa-pencil-square-o'></i> Nous vous invitons à vous engager avec NOUS. <b>Signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger", id: "#sign-manifest"}
 
