--- a/app/views/home/coor.haml
+++ b/app/views/home/coor.haml
@@ -9,7 +9,7 @@
     .alert.alert-warning Ce qui suit est une proposition à discuter dans vos ACRQ
 
     %p
-      Le comité organisateur (COOR) serait formé du Conseil des Opérations (C.O.) et de deux membres des différents comités à former qui auront à servir l’ensemble des Assemblées constituantes régionales québécoises (ACRQ).  Les dix-sept « Responsables des Services de Région (RSR) » complèteraient la formation du COOR et il se réunirait à tous les mois à compter de janvier 2016.
+      Le comité organisateur (COOR) serait formé du Conseil des Opérations (C.O.) et de deux membres des différents comités à former qui auront à servir l’ensemble des Alliances constituantes régionales québécoises (ACRQ).  Les dix-sept « Responsables des Services de Région (RSR) » complèteraient la formation du COOR et il se réunirait à tous les mois à compter de janvier 2016.
 
     %p
       Le rôle du COOR est de tout mettre en œuvre pour offrir toutes les ressources possibles aux différentes composantes de l’Alliance pour une constituante citoyenne du Québec (ACCQ) pour assurer l’harmonisation de notre démarche et l’atteinte de nos objectifs.
