--- a/app/views/home/deuxieme_rencontre_nationale.haml
+++ b/app/views/home/deuxieme_rencontre_nationale.haml
@@ -15,7 +15,7 @@
       Cette rencontre se tiendra les 31 octobre et 1er novembre dans la magnifique région de Chaudière-Appalaches. C’est donc à Lévis, dans la continuité de ce que nous avons réalisé ENSEMBLE à Drummondville, que nous nous engagerons à entériner les propositions émanant des régions (ACRQ) pour asseoir notre structure organisationnelle et le contenu de nos textes de base (Manifeste et Énoncés de mission).
 
     %p
-      Nous invitons donc l'ensemble des Assemblées constituantes régionales québécoises (ACRQ) à revoir avec attention l'ensemble du contenu de notre nouveau site internet.
+      Nous invitons donc l'ensemble des Alliances constituantes régionales québécoises (ACRQ) à revoir avec attention l'ensemble du contenu de notre nouveau site internet.
 
 
     %p
