--- a/app/views/home/mission.haml
+++ b/app/views/home/mission.haml
@@ -17,4 +17,4 @@
     %p.small
       Le nom que porte présentement notre regroupement, Alliance pour une constituante citoyenne du Québec, ne signifie aucunement que nous prétendons avoir la légitimité de présumer de la volonté du peuple québécois ou choisir à sa place la façon dont il décidera de se gouverner lorsque l'Assemblée constituante sera convoquée par le pouvoir légitime.
 
-    %p= link_to "Pour rejoindre votre Assemblée constituante régionale québécoise (ACRQ)...", hives_path
+    %p= link_to "Pour rejoindre votre Alliance constituante régionale québécoise (ACRQ)...", hives_path
