--- a/app/views/home/moyen.haml
+++ b/app/views/home/moyen.haml
@@ -57,5 +57,5 @@
     %blockquote
       %h2 Un monde libre et responsable déploie ses ailes. ENSEMBLE, prenons notre envol!
 
-    %p= link_to "Pour rejoindre votre Assemblée constituante régionale québécoise (ACRQ)…", hives_path
+    %p= link_to "Pour rejoindre votre Alliance constituante régionale québécoise (ACRQ)…", hives_path
       
