--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -36,7 +36,7 @@
 
 
   .col-md-6
-    %h3.sub-section Pour rejoindre votre Assemblée constituante régionale québecoise (ACRQ)
+    %h3.sub-section Pour rejoindre votre Alliance constituante régionale québecoise (ACRQ)
 
     .row
       -@hives.each_with_index do |h,index|
