--- a/app/views/home/table_nationale.haml
+++ b/app/views/home/table_nationale.haml
@@ -9,4 +9,4 @@
     %p Tous les membres seront informés des détails de cet événement fondateur d'ici le 21 août prochain.
 
     %p
-      D'ici là, concentrons nos énergies afin de mobiliser et de regrouper dans chacune des 17 Assemblées Constituantes Régionales Québécoises (ACRQ), une centaine de citoyennes et de citoyens qui comprennent bien le sens de notre démarche constituante (ces regroupements correspondent actuellement aux 17 régions administratives du Québec).
+      D'ici là, concentrons nos énergies afin de mobiliser et de regrouper dans chacune des 17 Alliances Constituantes Régionales Québécoises (ACRQ), une centaine de citoyennes et de citoyens qui comprennent bien le sens de notre démarche constituante (ces regroupements correspondent actuellement aux 17 régions administratives du Québec).
