--- a/app/views/hives/show.haml
+++ b/app/views/hives/show.haml
@@ -4,7 +4,7 @@
 -breadcrumb :hive, @hive
 .row
   .col-md-12
-    %h3 Bienvenue dans votre Assemblée constituante régionale québécoise!
+    %h3 Bienvenue dans votre Alliance constituante régionale québécoise!
 
     -if @hive.fb_url.present?
       %p
