--- a/app/views/home/vision.haml
+++ b/app/views/home/vision.haml
@@ -4,14 +4,14 @@
 -breadcrumb :vision
 
 .row
-  .col-md-12    
+  .col-md-12
     =render "mission_nav", active: :vision
     %h2.sub-section La démocratie, d'abord et avant tout!
 
     %p Les hommes et les femmes qui s’engagent avec nous s’entendent pour mettre en tête de liste de leurs actions politiques, l'instauration d'une véritable démocratie au Québec par une démarche constituante citoyenne non partisane pour que le peuple reprenne les guides de son avenir collectif.
 
-    %p Nous, Constituant.e.s, invitons tous ceux et celles qui ont une cause à cœur (<i>environnement, éducation et instruction, langue, santé, répartition de la richesse, bien commun, droits des personnes vulnérables, droits des enfants, droits des travailleurs, répartition des pouvoirs, développement régional, mode de scrutin, système politique, etc.</i>) à nous rejoindre. 
+    %p Nous, Constituant.e.s, invitons tous ceux et celles qui ont une cause à cœur (<i>environnement, éducation et instruction, langue, santé, répartition de la richesse, bien commun, droits des personnes vulnérables, droits des enfants, droits des travailleurs, répartition des pouvoirs, développement régional, mode de scrutin, système politique, etc.</i>) à nous rejoindre.
 
     %p Pour nous, l’autorité ultime en démocratie, c’est NOUS, le peuple. 
     
-    %p= link_to "Pour rejoindre votre Assemblée constituante régionale québécoise (ACRQ)…", hives_path
+    %p= link_to "Pour rejoindre votre Alliance constituante régionale québécoise (ACRQ)…", hives_path
