Modifier l'image d'entête - ticket #28

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -71,7 +71,7 @@
     
     -if controller_name == 'home' && action_name=='show'
       %header
-        =image_tag "bg.jpg", class: "img-responsive"
+        =image_tag "bg2.jpg", class: "img-responsive"
     -else
       %header
         =image_tag "small_bg.jpg", class: "img-responsive"
