Centraliser le nom de l'organisation dans fr.yml

--- a/app/views/home/deuxieme_rencontre_nationale.haml
+++ b/app/views/home/deuxieme_rencontre_nationale.haml
@@ -9,7 +9,7 @@
       Ami.e.s Constituant.e.s,
 
     %p
-      Notre première rencontre nationale à Drummondville a connu un succès tel que c’est avec enthousiasme que nous vous annonçons la tenue d’une deuxième rencontre nationale de l'Alliance pour une constituante citoyenne du Québec.
+      Notre première rencontre nationale à Drummondville a connu un succès tel que c’est avec enthousiasme que nous vous annonçons la tenue d’une deuxième rencontre nationale de #{t("org_name"}.
 
     %p
       Cette rencontre se tiendra les 31 octobre et 1er novembre dans la magnifique région de Chaudière-Appalaches. C’est donc à Lévis, dans la continuité de ce que nous avons réalisé ENSEMBLE à Drummondville, que nous nous engagerons à entériner les propositions émanant des régions (ACRQ) pour asseoir notre structure organisationnelle et le contenu de nos textes de base (Manifeste et Énoncés de mission).
@@ -25,7 +25,7 @@
 
     %p Les constituant.e.s présents recevront également, à Lévis, la proposition du C.O.I. quant au mandat qui lui a été donné concernant la structure corporative.
 
-    %p Finalement, nous aurons à nous entendre sur le mode sélection qui sera retenu pour choisir le tout premier C.O. de l'Alliance pour une constituante citoyenne du Québec ainsi que sur la durée de son mandat.
+    %p Finalement, nous aurons à nous entendre sur le mode sélection qui sera retenu pour choisir le tout premier C.O. de #{t("org_name")} ainsi que sur la durée de son mandat.
 
     %p Pour faire de cette deuxième rencontre nationale, un événement marquant vers la réalisation de nos objectifs, nous comptons sur votre implication et sur votre présence !
 
