--- a/app/views/home/mission.haml
+++ b/app/views/home/mission.haml
@@ -9,12 +9,12 @@
     %h2.sub-section
       Le grand chantier de la Constituante commence maintenant!
     %p
-      L'Alliance pour une constituante citoyenne du Québec se donne comme mission de promouvoir, de préparer et de provoquer la convocation d’une Assemblée constituante non partisane, totalement libre dans ses délibérations.
+      L'#{t("org_name")} se donne comme mission de promouvoir, de préparer et de provoquer la convocation d’une Assemblée constituante non partisane, totalement libre dans ses délibérations.
     %blockquote
       %p.lead
         Notre regroupement d’hommes et de femmes engagé sur la voie d’une véritable démocratie est déterminé à tout mettre en œuvre pour que la toute première Constitution démocratique du Québec soit rédigée par et pour le peuple. Pour démontrer l’efficacité de notre mode de fonctionnement, nous nous engagerons ensemble, lors d’un exercice simulé, à la rédaction d’une première constitution préparatoire.
 
     %p.small
-      Le nom que porte présentement notre regroupement, Alliance pour une constituante citoyenne du Québec, ne signifie aucunement que nous prétendons avoir la légitimité de présumer de la volonté du peuple québécois ou choisir à sa place la façon dont il décidera de se gouverner lorsque l'Assemblée constituante sera convoquée par le pouvoir légitime.
+      Le nom que porte présentement notre regroupement, #{t("org_name")}, ne signifie aucunement que nous prétendons avoir la légitimité de présumer de la volonté du peuple québécois ou choisir à sa place la façon dont il décidera de se gouverner lorsque l'Assemblée constituante sera convoquée par le pouvoir légitime.
 
     %p= link_to "Pour rejoindre votre Alliance constituante régionale québécoise (ACRQ)...", hives_path
