--- a/app/views/home/moyen.haml
+++ b/app/views/home/moyen.haml
@@ -7,7 +7,7 @@
 .row
   .col-md-12
     =render "mission_nav", active: :moyen
-    %h2.sub-section L'Alliance pour une constituante citoyenne du Québec s’engage à l'instauration d'une véritable démocratie par un processus constituant libre dans ses délibérations. Vous engagez-vous avec NOUS?
+    %h2.sub-section L'#{t("org_name")} s’engage à l'instauration d'une véritable démocratie par un processus constituant libre dans ses délibérations. Vous engagez-vous avec NOUS?
 
     %h3 NOS OBJECTIFS
     %h4 Objectif 1: Promouvoir l’importance d’une démarche constituante afin que notre constitution soit rédigée par et pour le peuple.
@@ -41,7 +41,7 @@
 
         %li Regrouper les Québécois et les Québécoises pour qu’ils s’exercent, lors d’ateliers constituants, à rédiger une Loi fondamentale et participent aussi à définir le mode de fonctionnement d’une assemblée constituante simulée.
 
-        %li Inviter tous les Constituant.e.s  à participer à la rédaction d'une constitution préparatoire, une fois que nous aurons ensemble défini, son mode de fonctionnement. L’Alliance pour une constituante citoyenne du Québec orchestrera alors une Constituante simulée. Tous les débats de l’Alliance pour une constituante citoyenne du Québec seront accessibles sur internet.
+        %li Inviter tous les Constituant.e.s  à participer à la rédaction d'une constitution préparatoire, une fois que nous aurons ensemble défini, son mode de fonctionnement. L’#{t("org_name")} orchestrera alors une Constituante simulée. Tous les débats de l’#{t("org_name")} seront accessibles sur internet.
 
         %li Diffuser le résultat de l’expérience constituante à toute la population du Québec.
 
