--- a/app/views/home/objectifs.haml
+++ b/app/views/home/objectifs.haml
@@ -7,7 +7,7 @@
   .col-md-12
     =render "mission_nav", active: :objectifs
     
-    %h2.sub-section LE PREMIER OBJECTIF de l'Alliance pour une constituante citoyenne du Québec vise à mobiliser un minimum de 100 000 personnes comprenant bien le sens d'une démarche constituante non partisane.
+    %h2.sub-section LE PREMIER OBJECTIF de l'#{t("org_name"} vise à mobiliser un minimum de 100 000 personnes comprenant bien le sens d'une démarche constituante non partisane.
 
     %p <strong>NOUS,</strong> Constituants, Constituantes, exercerons les pressions nécessaires auprès de toutes les personnes concernées d’ici le prochain rendez-vous électoral québécois afin que les candidat(e)s s'engagent solennellement, au-delà de toute ligne de parti,  à convoquer, sans délai, une Assemblée constituante indépendante de l'État et à lui fournir les moyens requis pour un fonctionnement efficace.
 
@@ -25,7 +25,7 @@
     
     %p Tous les débats de l’ACCQ seront accessibles par web diffusion.
 
-    %p Une fois notre structure organisationnelle bien établie, nous définirons ENSEMBLE, démocratiquement, le mode de fonctionnement (lignes de conduite, critères d’éligibilité, statuts et règlements, etc.) de l’Alliance pour une constituante citoyenne du Québec.
+    %p Une fois notre structure organisationnelle bien établie, nous définirons ENSEMBLE, démocratiquement, le mode de fonctionnement (lignes de conduite, critères d’éligibilité, statuts et règlements, etc.) de l’#{t("org_name")}.
 
 
     %h3 Comment le réaliserons-nous ?
