--- a/app/views/structure/_structure_organisationnelle_globale.haml
+++ b/app/views/structure/_structure_organisationnelle_globale.haml
@@ -2,7 +2,7 @@
 %p
   =image_tag "organigramme/structure_organisationnelle_globale.jpg", class: "img-responsive thumbnail"
 %p
-  L’Alliance pour une constituante citoyenne du Québec vous remercie de prendre le temps nécessaire pour bien comprendre les fondements de notre organisation. Nous tenons à préciser que la structure de notre organisation est horizontale. 
+  L’#{t("org_name")} vous remercie de prendre le temps nécessaire pour bien comprendre les fondements de notre organisation. Nous tenons à préciser que la structure de notre organisation est horizontale. 
   
 %p
   Bien que tous les postes occupés par les constituant.e.s nécessitent des talents et des compétences particulières, aucun des responsables n’a autorité sur les autres. Les constituant.e.s impliqués sont des personnes de confiance qui travaillent avec enthousiasme et détermination à la poursuite de notre objectif commun, soit :
