--- a/app/views/structure/structure_nationale/_comites_nationaux.haml
+++ b/app/views/structure/structure_nationale/_comites_nationaux.haml
@@ -21,7 +21,7 @@
   %h4.sub-section Financement
   %ul
     %li Fait les démarches relatives à notre structure corporative (OSBL);
-    %li Gère le budget de l’Alliance pour une constituante citoyenne du Québec avec l’OSBL;
+    %li Gère le budget de l’#{t("org_name")} avec l’OSBL;
     %li Recherche du financement;
     %li S’occupe du financement des événements;
     %li Fait le suivi pour la production des outils promotionnels (macarons, t-shirts, tracts, savons, etc.);
@@ -40,7 +40,7 @@
   %ul
     %li Prépare le matériel nécessaire pour les rencontres informatives (Powerpoint et vidéos);
     %li Produit les pochettes publicitaires;
-    %li Produit les documents officiels de l'Alliance pour une constituante citoyenne du Québec;
+    %li Produit les documents officiels de l'#{t("org_name")};
     %li Établit les listes de diffusion;
     %li Établit les contacts  avec les médias (journaux, télés, radios);
     %li Produit les communiqués de presse;
@@ -78,7 +78,7 @@
 %section#comite-secretariat
   %h4.sub-section Secrétariat-registrariat
   %ul
-    %li Assure que tous les documents officiels produits par l’Alliance pour une constituante citoyenne du Québec sont rédigés dans un français impeccable;
+    %li Assure que tous les documents officiels produits par l’#{t("org_name")} sont rédigés dans un français impeccable;
     %li Vérifie et révise tous les documents;
     %li Voit à la mise à jour des données personnelles de tous les contituant.e.s au Québec et en assure la confidentialité;
     %li Transmet aux responsables régionaux la liste de leurs constituant.e.s;
