--- a/app/views/structure/structure_nationale/_coor.haml
+++ b/app/views/structure/structure_nationale/_coor.haml
@@ -8,7 +8,7 @@
   Le comité organisateur (COOR) est formé du Conseil des opérations (C.O.), d’un membre des différents comités nationaux (A-mobilisation, B-financement et trésorerie, C-communications, D-éducation, E-web, F-secrétariat et régistrariat, G-résolution de problèmes) et des dix-sept responsables des services en région (RSR). Il a comme mandat d’offrir des services à l’ensemble des Alliances constituantes régionales québécoises (ACRQ).
 
 %p
-  De plus, le rôle du COOR est de tout mettre en œuvre pour offrir toutes les ressources possibles aux différentes composantes de l’Alliance pour une constituante citoyenne du Québec afin d’assurer l’harmonisation de notre démarche et l’atteinte de nos objectifs.
+  De plus, le rôle du COOR est de tout mettre en œuvre pour offrir toutes les ressources possibles aux différentes composantes de l’#{t("org_name")} afin d’assurer l’harmonisation de notre démarche et l’atteinte de nos objectifs.
 
 %p
   Les réunions du COOR se tiendront chaque semaine à compter de janvier 2016 par l’entremise des médias sociaux. En collaboration avec les constituant.e.s de la région concernée, c’est lui qui organise les Tables nationales auxquelles il assiste.
