--- a/app/views/home/coor.haml
+++ b/app/views/home/coor.haml
@@ -12,11 +12,11 @@
       Le comité organisateur (COOR) serait formé du Conseil des Opérations (C.O.) et de deux membres des différents comités à former qui auront à servir l’ensemble des Alliances constituantes régionales québécoises (ACRQ).  Les dix-sept « Responsables des Services de Région (RSR) » complèteraient la formation du COOR et il se réunirait à tous les mois à compter de janvier 2016.
 
     %p
-      Le rôle du COOR est de tout mettre en œuvre pour offrir toutes les ressources possibles aux différentes composantes de l’Alliance pour une constituante citoyenne du Québec (ACCQ) pour assurer l’harmonisation de notre démarche et l’atteinte de nos objectifs.
+      Le rôle du COOR est de tout mettre en œuvre pour offrir toutes les ressources possibles aux différentes composantes de l’#{t("org_name")} (ACCQ) pour assurer l’harmonisation de notre démarche et l’atteinte de nos objectifs.
 
     %h3.sub-section Le conseil des opérations (C.O.)
     %p
-      Le Conseil des Opérations (C.O.) se veut le cœur du noyau central (COOR) de l’Alliance pour une constituante citoyenne du Québec. Toutes ses décisions sont prises en collégialité. C’est lui qui voit à l’harmonisation de toute la structure horizontale de notre démarche. Son mandat est d’assurer l’unité de toutes les entités actuellement formées et à venir. Ses membres doivent être choisis avec beaucoup de précaution et de vigilance puisque c’est l’épine dorsale de notre démarche. L’engagement des membres qui en feront partie doit être basé sur une intégrité à toute épreuve pour ne servir aucun autre intérêt que celui du peuple.
+      Le Conseil des Opérations (C.O.) se veut le cœur du noyau central (COOR) de l’#{t("org_name")}. Toutes ses décisions sont prises en collégialité. C’est lui qui voit à l’harmonisation de toute la structure horizontale de notre démarche. Son mandat est d’assurer l’unité de toutes les entités actuellement formées et à venir. Ses membres doivent être choisis avec beaucoup de précaution et de vigilance puisque c’est l’épine dorsale de notre démarche. L’engagement des membres qui en feront partie doit être basé sur une intégrité à toute épreuve pour ne servir aucun autre intérêt que celui du peuple.
 
     %p
       Le C.O. est l'instance qui établit le lien entre les régions et assure la transmission et la libre circulation des informations. Il s’assure que toutes les décisions entérinées par la majorité absolue des membres d’une ACRQ soient acheminées dans les autres régions pour qu’elles les entérinent à leur tour. Le Conseil des opérations supervise le travail des comités et assure leurs bons fonctionnements. Il a la responsabilité d’établir les grandes lignes d’orientations avec les responsables de services des ACRQ. Il a les pouvoirs de prendre les décisions nécessaires pour assurer le bon fonctionnement des groupes et des événements promotionnels. <b>Il n’a cependant aucun pouvoir exécutif sur les orientations sans d’abord avoir reçu l’assentiment d’un maximum d’ACRQ.</b>
@@ -48,7 +48,7 @@
         %strong Financement
         %ul
           %li Il est mandaté pour faire les démarches relatives à notre structure corporative (OSBL)
-          %li S’occupe des finances de l’Alliance pour une constituante citoyenne du Québec avec l’OSBL
+          %li S’occupe des finances de l’#{t("org_name")} avec l’OSBL
           %li S’occupe de rechercher des moyens de financement
           %li S’occupe du financement des événements
           %li S’occupe de faire le suivi pour la production des outils promotionnels (macarons, t-shirt, tract, savon et autres…
@@ -65,7 +65,7 @@
         %ul
           %li Préparer le matériel nécessaire pour les rencontres informatives (power point et vidéos)
           %li Produire les pochettes publicitaires
-          %li Produire les documents officiels de l'Alliance pour une constituante citoyenne du Québec
+          %li Produire les documents officiels de l'#{t("org_name")}
           %li Établir les listes de diffusion
           %li Établir les contacts  avec les médias journaux, télé, radios
           %li Production de communiqués de presse
@@ -90,7 +90,7 @@
       %li
         %strong Secrétariat-registrariat
         %ul
-          %li Assure que tous les documents officiels produits par l’Alliance pour une constituante citoyenne du Québec sont rédigés dans un français impeccable.
+          %li Assure que tous les documents officiels produits par l’#{t("org_name")} sont rédigés dans un français impeccable.
           %li Vérifie et révise tous les documents
           %li Voit à la mise à jour de tous les Contituant.e.s au Québec et assure la confidentialité des données personnelles.
           %li Retransmet aux Responsables Régionaux la liste de leurs constituant.e.s.
