--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -32,7 +32,7 @@
 
     %h3.sub-section Aimez notre page Facebook
     :plain
-      <div class="fb-page" data-href="https://www.facebook.com/ConstituanteCitoyenne?fref=ts" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/ConstituanteCitoyenne?fref=ts"><a href="https://www.facebook.com/ConstituanteCitoyenne?fref=ts">Alliance pour une constituante citoyenne du Québec</a></blockquote></div></div>
+      <div class="fb-page" data-href="https://www.facebook.com/ConstituanteCitoyenne?fref=ts" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/ConstituanteCitoyenne?fref=ts"><a href="https://www.facebook.com/ConstituanteCitoyenne?fref=ts">#{t("org_name")}</a></blockquote></div></div>
 
 
   .col-md-6
