--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -66,7 +66,7 @@
     %footer
       .container
         %p.text-muted
-          Alliance pour une constituante citoyenne du Québec (ACCQ) @#{Date.today.year}
+          #{t("org_name")} (ACCQ) @#{Date.today.year}
           -if false
             \-
             %i.fa.fa-bitbucket-square
