--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,10 +2,10 @@
 %html
   %head
     %meta{:charset => "utf-8"}
-    %title #{content_for?(:page_title) ? yield(:page_title) + " - L'Alliance pour une constituante citoyenne du Québec" : "L'Alliance pour une constituante citoyenne du Québec"}
+    %title #{content_for?(:page_title) ? yield(:page_title) + " - " + t("org_name") : t("org_name")}
     %meta{:content => "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no", :name => "viewport"}
     %meta{:name => "viewport", :content => "initial-scale=1.0, user-scalable=no"}
-    %meta{:content => "Alliance pour une constituante citoyenne du Québec. Ensemble, constituons le Québec.", :name => "description"}
+    %meta{:content => "#{t("org_name")}. Ensemble, constituons le Québec.", :name => "description"}
     / Le HTML5 shim, for IE6-8 support of HTML5 elements
     /[if lt IE 9]
       = javascript_include_tag "https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js", "https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"
@@ -97,7 +97,7 @@
       .container
         %p.text-muted
           =image_tag("logo_trans.png", height: 30)
-          Alliance pour une constituante citoyenne du Québec @#{Date.today.year}
+          #{t("org_name")} @#{Date.today.year}
           \-
           #{link_to "À propos du site web", a_propos_path}
       -if Rails.env.production?
