Ajouter page Mumble. Ticket #30

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -58,6 +58,7 @@
                 %li= link_to "Promouvoir", promotional_tools_path
 
             %li= link_to "Forum", "http://forum.constituantecitoyenne.quebec"
+            %li= link_to "Mumble", mumble_path
             %li= link_to "Nous joindre", nous_joindre_path
     
     -if controller_name == 'home' && action_name=='show'
