--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -42,25 +42,25 @@
             %li= link_to "Constat", constat_path
             %li= link_to "Manifeste", manifest_path
             %li= link_to "Mission", mission_path
-            
+
 
             %li= link_to "Organigramme", structure_path
 
-          
+
             %li.dropdown
               %a{href: "#", class: "dropdown-toggle", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
                 Éducation
                 %span.caret
-          
+
               %ul.dropdown-menu
                 %li= link_to "Bibliothèque".html_safe, bibliotheque_path
                 %li= link_to "Médiathèque".html_safe, mediatheque_path
                 %li= link_to "Promouvoir", promotional_tools_path
 
             %li= link_to "Forum", "http://forum.constituantecitoyenne.quebec"
-            %li= link_to "Mumble", mumble_path
+            %li= link_to "Discutoire", mumble_path
             %li= link_to "Nous joindre", nous_joindre_path
-    
+
     -if controller_name == 'home' && action_name=='show'
       %header
         =image_tag "bg3.jpg", class: "img-responsive"
@@ -82,7 +82,7 @@
         .page-header
           %h1
             =yield(:page_title)
-             
+
       = yield
 
     %footer
