Ajout du code mumble ticket #30

--- a/app/views/home/mumble.haml
+++ b/app/views/home/mumble.haml
@@ -36,7 +36,7 @@
           64082
           %br/
           %strong Nom d’utilisateur:
-          Votre pseudo (doit permetre de vous identifier)
+          Votre pseudo (doit permettre de vous identifier)
           
       
     %h2 3. Réglages MUMBLE
@@ -61,4 +61,8 @@
           64082
           %br/
           %strong Nom d’utilisateur:
-          Votre pseudo  (doit permetre de vous identifier)
+          Votre pseudo  (doit permettre de vous identifier)
+    .row
+      .col-md-12
+        :plain
+          <script type="text/javascript" src="https://view.light-speed.com/mumble.php?url=https%3A//api.mumble.com/mumble/cvp.php%3Ftoken%3DLSG-85-F8F57DEB&c=04418f&r=7&h=600&w=315&css=https%3A//view.light-speed.com/styles/mumble-minimal.css"></script>      
