Billet #31: correction faute de frappe.

--- a/app/views/home/mumble.haml
+++ b/app/views/home/mumble.haml
@@ -10,7 +10,7 @@
         =image_tag "mumble-logo.png", class: "img-responsive"
       .col-md-10
         %p.lead
-          Nous mettons à votre disposition un outils libre et gratuit qui vous permet de venir discuter avec nous ou entre vous des sujets qui vous intéressent. Avec un ordinateur, une tablette ou un téléphone intelligent, un casque d’écoute, un micro et une connexion internet, vous serez en mesure de participer tous les jours à n’importe quelle heure.
+          Nous mettons à votre disposition un outil libre et gratuit qui vous permet de venir discuter avec nous ou entre vous des sujets qui vous intéressent. Avec un ordinateur, une tablette ou un téléphone intelligent, un casque d’écoute, un micro et une connexion internet, vous serez en mesure de participer tous les jours à n’importe quelle heure.
         
     %h2 1. Installation
     .row
@@ -65,4 +65,4 @@
     .row
       .col-md-12
         :plain
-          <script type="text/javascript" src="https://view.light-speed.com/mumble.php?url=https%3A//api.mumble.com/mumble/cvp.php%3Ftoken%3DLSG-85-F8F57DEB&c=04418f&r=7&h=600&w=315&css=https%3A//view.light-speed.com/styles/mumble-minimal.css"></script>      
+          <script type="text/javascript" src="https://view.light-speed.com/mumble.php?url=https%3A//api.mumble.com/mumble/cvp.php%3Ftoken%3DLSG-85-F8F57DEB&c=04418f&r=7&h=600&w=315&css=https%3A//view.light-speed.com/styles/mumble-minimal.css"></script>
