--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,6 +1,6 @@
 body {
   font-family: 'PT Sans', sans-serif;
-   font-size: 17px; 
+   font-size: 17px;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -17,7 +17,7 @@ h1,h2,h3,h4,h5,h6 {
  
 }
 
-h2.sub-section, h3.sub-section, h4.sub-section {
+h2.sub-section, h3.sub-section, h4.sub-section, h5.sub-section {
   color: $black;
   border-bottom: 1px solid #ddd;
   padding-bottom:4px;
