--- a/app/views/admin/home/show.haml
+++ b/app/views/admin/home/show.haml
@@ -5,5 +5,6 @@
 %ul
   %li= link_to "Gérer les ACRQ", admin_hives_path
   %li= link_to "Gérer les signatures du manifeste", admin_members_path
+  %li= link_to "Gérer les signatures de «L'appel»", admin_event_participants_path(2)
   %li= link_to "Voir le site dans un nouvel onglet", root_path, target: "_blank"
-  %li= link_to("Se déconnecter", destroy_user_session_path, :method => :delete, id: "sign-out") 
+  %li= link_to("Se déconnecter", destroy_user_session_path, :method => :delete, id: "sign-out")
