Billet #33: Transformer tous les liens externes en "https"
Puisque le site deviendra sous peu sécurisé sous SSL, tous les liens externes doivent également pointer
vers des sites sécurisés, et ce afin d'éviter un avertissement dans les navigateurs.

--- a/app/views/home/media_coverage.haml
+++ b/app/views/home/media_coverage.haml
@@ -7,11 +7,11 @@
     %h3.sub-section Articles de journaux
     %ul.list-unstyled
       %li
-        14 septembre 2015 
+        14 septembre 2015
         \-
-        %i La Tribune 
+        %i La Tribune
         \-
-        =link_to "Un groupe jete les bases d'une Constituante citoyenne du Québec", "http://www.lapresse.ca/la-tribune/estrie-et-regions/201509/14/01-4900298-un-groupe-jete-les-bases-dune-constituante-citoyenne-du-quebec.php", target: "_blank"
+        =link_to "Un groupe jete les bases d'une Constituante citoyenne du Québec", "https://www.lapresse.ca/la-tribune/estrie-et-regions/201509/14/01-4900298-un-groupe-jete-les-bases-dune-constituante-citoyenne-du-quebec.php", target: "_blank"
 
   .col-md-6
     %h3.sub-section Audio / Vidéo
