--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -16,7 +16,7 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
     %link{:href => image_path('favicon.ico'), :rel => "icon", :type => "image/vnd.microsoft.icon"}/
-    %link{:href => 'http://fonts.googleapis.com/css?family=PT+Sans', :rel => 'stylesheet', :type => 'text/css'}/
+    %link{:href => 'https://fonts.googleapis.com/css?family=PT+Sans', :rel => 'stylesheet', :type => 'text/css'}/
   %body
     :plain
       <div id="fb-root"></div>
