--- a/app/views/home/mumble.haml
+++ b/app/views/home/mumble.haml
@@ -16,7 +16,7 @@
     .row
       .col-md-12
         %p
-          Pour nous rejoindre, il vous suffit de télécharger le logiciel sous licence libre à l’adresse suivante : #{link_to "http://www.mumble.com/", "http://www.mumble.com/", target: "_blank"} et de suivre les #{link_to "étapes d’installation", "http://www.mumble.com/support/mumble-server-install-on-windows.php", target: "_blank"}
+          Pour nous rejoindre, il vous suffit de télécharger le logiciel sous licence libre à l’adresse suivante : #{link_to "https://www.mumble.com/", "https://www.mumble.com/", target: "_blank"} et de suivre les #{link_to "étapes d’installation", "https://www.mumble.com/support/mumble-server-install-on-windows.php", target: "_blank"}
         
         %p= image_tag "download_mumble.jpg"
         
@@ -24,7 +24,7 @@
     .row
       .col-md-12
         %p
-          Une fois installé, il vous suffit de l’ouvrir et de vous connecter à notre serveur avec les informations ci-dessous et en suivant les étapes décrites ici : #{link_to "http://www.mumble.com/support/how-to-connect-to-a-mumble-server.php", "http://www.mumble.com/support/how-to-connect-to-a-mumble-server.php", target: "_blank"}
+          Une fois installé, il vous suffit de l’ouvrir et de vous connecter à notre serveur avec les informations ci-dessous et en suivant les étapes décrites ici : #{link_to "https://www.mumble.com/support/how-to-connect-to-a-mumble-server.php", "https://www.mumble.com/support/how-to-connect-to-a-mumble-server.php", target: "_blank"}
         %blockquote
           %strong Nom:
           A.C.C.Q. (vous pouvez mettre ce que vous voulez, ce champ vous permet de vous rappeler de quel serveur il s’agit).
@@ -43,7 +43,7 @@
     .row
       .col-md-12
         %p
-          Une fois connecté, il est important de régler la fonction « appuyer pour parler » (push to talk) qui est très pratique pour tout le monde, elle permet d’éviter les échos des autres personnes (rendant les conversations très désagréables). Vous n’avez qu’à suivre les étapes : #{link_to "http://www.mumble.com/support/mumble-server-push-to-talk.php", "http://www.mumble.com/support/mumble-server-push-to-talk.php", target: "_blank"}
+          Une fois connecté, il est important de régler la fonction « appuyer pour parler » (push to talk) qui est très pratique pour tout le monde, elle permet d’éviter les échos des autres personnes (rendant les conversations très désagréables). Vous n’avez qu’à suivre les étapes : #{link_to "https://www.mumble.com/support/mumble-server-push-to-talk.php", "https://www.mumble.com/support/mumble-server-push-to-talk.php", target: "_blank"}
   .col-md-4
     .row
       .col-md-12
