régler quelques coquilles

--- a/app/views/home/constat.haml
+++ b/app/views/home/constat.haml
@@ -10,9 +10,12 @@
 
     %p Ce regroupement de Québécois et de Québécoises est né d'un double constat :
     %ol
-      %li Les principes de notre démocratie représentative permettent le contrôle par les partis politiques et les puissances économiques qui détournent le pouvoir à leur profit, à tel point que la population n'a pratiquement aucune prise sur les décisions qui la concernent. Cet état de fait met en péril notre avenir et l'avenir du monde.
-      %li  La seule façon de surmonter notre impuissance est de nous rassembler et d'instituer un pouvoir populaire. Une Assemblée constituante citoyenne NON PARTISANE, libre dans ses délibérations, est un moyen pacifique d’y arriver.
+      %li
+        Les principes de notre démocratie représentative permettent le contrôle par les partis politiques et les puissances économiques qui détournent le pouvoir à leur profit, à tel point que la population n'a pratiquement aucune prise sur les décisions qui la concernent.
+        Cet état de fait met en péril notre avenir et l'avenir du monde.
+      %li
+        Afin de surmonter notre impuissance, nous  croyons qu'il est essentiel de nous rassembler et d'instituer un pouvoir populaire. Il appartient au peuple d'exercer sa souveraineté par son Assemblée constituante citoyenne.  De ce fait, nous exigeons la convocation d'une Constituante citoyenne, non partisane, libre dans ses délibérations, selon nous le meilleur moyen pacifique d'incarner la souveraineté du peuple.
 
     %p Considérant que la population québécoise ne s’est jamais prononcée sur sa Loi fondamentale, NOUS, le peuple, sommes en droit de définir la façon dont nous voulons nous gouverner et dicter les lignes directrices que doit suivre l’État.
 
-    %p Pour devenir Constituant.e.s avec NOUS, #{link_to "rejoignez maintenant votre Alliance constituante régionale québécoise (ACRQ)", hives_path}.
+    %p Pour devenir Constituant.e.s avec NOUS, rejoignez maintenant votre #{link_to "organisation régionale", hives_path} (ACRQ).
