--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -8,7 +8,7 @@
       %li
         Dans une démocratie digne de ce nom, le peuple est souverain. C’est donc à lui de dicter les règles du jeu.
       %li
-        Présentement, la souveraineté du peuple est bafouée de toutes parts. Ceux que nous avons choisis pour nous représenter, une fois élus, servent d’autres intérêts que ceux du peuple.
+        Présentement, la souveraineté du peuple est bafouée de toutes parts.  Trop souvent, ceux que nous choisissons pour nous représenter, une fois élus, servent d’autres intérêts que ceux du peuple.
       %li
         Pour sortir de cette impuissance politique, il ne suffit pas de manifester ni de changer de parti au pouvoir. Il faut changer le régime politique lui-même et les règles du jeu qui sont à la source de notre impuissance.
       %li
@@ -18,29 +18,30 @@
       %li
         Pour écrire notre constitution, il faut avoir recours au peuple souverain, car les partis politiques sont sur ce sujet en conflit d’intérêts. Ce n’est pas aux gens au pouvoir d’écrire les règles du pouvoir.
       %li
-        L’assemblée par laquelle le peuple peut exercer sa souveraineté et son pouvoir constituant de façon légitime, ordonnée et efficace est ce qu’on appelle une Assemblée constituante. Son rôle est d’inviter la population à y participer et à proposer en toute liberté, un texte de constitution pour adoption par référendum. Elle doit être représentative, non partisane et libre dans ses délibérations, donc composée idéalement de citoyens tirés au sort. Elle doit pouvoir recourir à toutes les ressources et expertises nécessaires pour faire son travail. Le débat public entourant son travail doit être encadré de façon à prévenir le contrôle de l’information par des intérêts particuliers.
+        L’assemblée par laquelle le peuple peut exercer sa souveraineté et son pouvoir constituant de façon légitime, ordonnée et efficace est ce qu’on appelle une Assemblée constituante. Son rôle est d’inviter la population à y participer et à proposer en toute liberté, un texte de constitution pour adoption par référendum. Elle doit être représentative, participative, non partisane et libre dans ses délibérations, donc composée idéalement de citoyens tirés au sort. Elle doit pouvoir recourir à toutes les ressources et expertises nécessaires pour faire son travail. Le débat public entourant son travail doit être encadré de façon à prévenir le contrôle de l’information par des intérêts particuliers.
       %li
-        L'Assemblée constituante doit idéalement être convoquée par l’Assemblée nationale pour s’assurer que la Constitution qui en résultera, une fois adoptée par référendum, ne puisse être écartée par les pouvoirs en place, au Québec, au Canada et à l’international.      
+        L'Assemblée constituante citoyenne doit idéalement être convoquée par l’Assemblée nationale pour s’assurer que la Constitution qui en résultera, une fois adoptée par référendum, ne puisse être écartée par les pouvoirs en place, au Québec, au Canada et à l’international.
       %li
-        Nous, Constituantes et Constituants, nous nous engageons à promouvoir, à préparer et à exiger la convocation d’une Assemblée constituante non partisane, libre dans ses délibérations, et à tout mettre en œuvre pour que soit respectée la volonté du peuple québécois.
-
+        Nous, citoyennes et citoyens responsables, nous nous engageons à promouvoir, à préparer et à provoquer la convocation d’une Assemblée constituante non partisane, libre dans ses délibérations, et à tout mettre en œuvre pour que soit respectée la volonté du peuple québécois.
+      %li
+        Voici la mission que s'est donnée l'Alliance pour une Constituante citoyenne du Québec (ACCQ) (Mettre un hyperlien qui nous dirige vers la mission)
 
   .col-md-4
-    %p 
+    %p
       =link_to "<i class='fa fa-pencil-square-o'></i> Voir les #{Member.confirmed.count.to_s + " signatures"}".html_safe, signatures_path, class: "btn btn-primary", id: "#all-signatures"
 
-    %h3.sub-section 
-      Dernières signatures      
+    %h3.sub-section
+      Dernières signatures
     %ul.list-unstyled#last-signatures
       -@latest_signatures.each do |member|
-        %li          
+        %li
           %small
             =member.name
-            \-          
+            \-
             =l(member.created_at.to_date, format: :long )
 
 
 .row
-  .col-xs-12  
+  .col-xs-12
     %h3 Je signe!
     =render "members/form"
