réparer coquille dans manifeste

--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -24,7 +24,7 @@
       %li
         Nous, citoyennes et citoyens responsables, nous nous engageons à promouvoir, à préparer et à provoquer la convocation d’une Assemblée constituante non partisane, libre dans ses délibérations, et à tout mettre en œuvre pour que soit respectée la volonté du peuple québécois.
       %li
-        Voici la mission que s'est donnée l'Alliance pour une Constituante citoyenne du Québec (ACCQ) (Mettre un hyperlien qui nous dirige vers la mission)
+        Voici la #{link_to "mission", mission_path} que s'est donnée l'Alliance pour une Constituante citoyenne du Québec (ACCQ) 
 
   .col-md-4
     %p
