--- a/app/views/home/constat.haml
+++ b/app/views/home/constat.haml
@@ -14,7 +14,7 @@
         Les principes de notre démocratie représentative permettent le contrôle par les partis politiques et les puissances économiques qui détournent le pouvoir à leur profit, à tel point que la population n'a pratiquement aucune prise sur les décisions qui la concernent.
         Cet état de fait met en péril notre avenir et l'avenir du monde.
       %li
-        Afin de surmonter notre impuissance, nous  croyons qu'il est essentiel de nous rassembler et d'instituer un pouvoir populaire. Il appartient au peuple d'exercer sa souveraineté par son Assemblée constituante citoyenne.  De ce fait, nous exigeons la convocation d'une Constituante citoyenne, non partisane, libre dans ses délibérations, selon nous le meilleur moyen pacifique d'incarner la souveraineté du peuple.
+        Afin de surmonter notre impuissance, nous  croyons qu'il est essentiel de nous rassembler et d'instituer un pouvoir populaire. Il appartient au peuple d'exercer sa souveraineté par son Assemblée constituante citoyenne.  De ce fait, nous exigeons la convocation d'une Constituante citoyenne, non partisane, libre dans ses délibérations, qui est, selon nous, le meilleur moyen pacifique d'incarner la souveraineté du peuple.
 
     %p Considérant que la population québécoise ne s’est jamais prononcée sur sa Loi fondamentale, NOUS, le peuple, sommes en droit de définir la façon dont nous voulons nous gouverner et dicter les lignes directrices que doit suivre l’État.
 
